<resources>
    <string name="app_name">csci3310_projcet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_registered">Not Registered?</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_registered">Already Registered?</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_update_profile">UpdateProfile</string>
    <string name="title">Title</string>
    <string name="title_activity_my_novel">MyNovelActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string-array name="Entries">
        <item>Item 1</item>
        <item>Item 2</item>
        <item>Item 3</item>
    </string-array>
</resources>
