<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:hint="@string/username"
        android:layout_marginTop="160dp"
        tools:layout_editor_absoluteX="162dp"
        tools:layout_editor_absoluteY="68dp"
        android:ems="10" />

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:hint="@string/password"
        android:layout_marginTop="20dp"
        tools:layout_editor_absoluteX="162dp"
        tools:layout_editor_absoluteY="139dp"
        android:ems="10"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/edittext_login"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/not_registered"
            />
        <TextView
            android:id="@+id/textview_register"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/register"
            />

    </LinearLayout>
</LinearLayout>